bugfix for android not updating window.location.pathname, collapsing nav after transition if it was open

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -130,11 +130,11 @@ body {
     background-color: #55A13B;
 }
 
-.green .nav-list .active > a {
+.nav-list .active > a {
     background-color: #55A13B;
 }
 
-.green .nav-list .active > a:hover {
+.nav-list .active > a:hover {
     color:#cfcfcf;
 }
 
